[gd_scene load_steps=7 format=3 uid="uid://bya814s12oehq"]

[ext_resource type="Script" uid="uid://dwbmnyoxgqocq" path="res://scripts/pause.gd" id="1_m0klm"]
[ext_resource type="Shader" uid="uid://cusohk5u0rcg3" path="res://shaders/pause.gdshader" id="1_r8yp4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m0klm"]
shader = ExtResource("1_r8yp4")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_aicil"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_m0klm"]
resource_name = "pause_blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jn4bt"]
_data = {
&"RESET": SubResource("Animation_aicil"),
&"pause_blur": SubResource("Animation_m0klm")
}

[node name="pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m0klm")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_m0klm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 157.0
offset_right = 1440.0
offset_bottom = 357.0
theme_override_font_sizes/font_size = 115
text = "Resume"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 409.0
offset_right = 1440.0
offset_bottom = 609.0
theme_override_font_sizes/font_size = 115
text = "Reset"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 660.0
offset_right = 1440.0
offset_bottom = 860.0
theme_override_font_sizes/font_size = 115
text = "Quit Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jn4bt")
}

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
